# substratum

./: .clang-tidy  .gitignore  .gitmodules  Makefile  assemble-execute.sh  ast.c  codegen.c  codegen_generic.c  codegen_riscv.c  compile-assemble-execute.sh  compile-link.sh  compiler.c  drop.c  enum_desc.c  idfa.c  idfa_livevars.c  idfa_reachingdefs.c  linearizer.c  linearizer_generic.c  livevars.c  log.c  parser.peg  parser_config.c  regalloc.c  regalloc_generic.c  regalloc_riscv.c  ssa.c  struct_desc.c  symtab.c  symtab_basicblock.c  symtab_class.c  symtab_enum.c  symtab_function.c  symtab_scope.c  symtab_struct.c  symtab_trait.c  symtab_type.c  symtab_variable.c  tac.c  tac_operand.c  (+3 more)
assembler/: CPU.asm  (+9 more)
rust-rewrite/: Cargo.toml  tarpaulin-report.html
rust-rewrite/core/: lib.sb  option.sb  panic.sb
rust-rewrite/name_derive/: Cargo.toml
rust-rewrite/name_derive/name_derive_macro/: Cargo.toml
rust-rewrite/name_derive/name_derive_macro/src/: lib.rs
rust-rewrite/name_derive/src/: lib.rs
rust-rewrite/src/: '  backend.rs  frontend.rs  hashmap_ooo_iter.rs  main.rs  map_ooo_iter.rs  midend.rs  trace.rs  tracing.rs
rust-rewrite/src/ast/: mod.rs
rust-rewrite/src/backend/: arch.rs  codegen.rs  lifetime.rs  mod.rs  module_context.rs  regalloc.rs  scope_stack.rs
rust-rewrite/src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  sourceloc.rs
rust-rewrite/src/lexer/: mod.rs
rust-rewrite/src/midend/: basic_block.rs  control_flow.rs  idfa.rs  ir.rs  linearizer.rs  mod.rs  program_point.rs  ssa.rs  ssa_gen.rs  symtab.rs  types.rs
rust-rewrite/src/parser/: mod.rs
(+471 files in other folders)
