[package]
name = "substratum-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["arch_RV64G"]
arch_RV64G = []

loud_lexing = []
loud_parsing = []


[dependencies]
name_derive = { path = "./name_derive" }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json",]}

